--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -50,10 +50,10 @@ nav {
       .category{
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        margin-left: 10px;
+        align-items: flex-center;
+        justify-content: flex-center;
       }
     }
   }
+
 }
