--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -156,3 +156,62 @@ footer {
     }
   }
 }
+@media screen and (max-width: 768px) {
+  .end{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-wrapper {
+    flex-direction: column;
+  }
+  .footer-descrip{
+    margin-right: 0;
+    margin-bottom: 20px;
+    width: 100%;
+    &::after{
+      display: none;
+    }
+    p {
+      font-size: 0.8rem;
+      line-height: 1.5;
+      text-align: center;
+    }
+    img{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 80px;
+    }
+  }
+  .other{
+    margin-top: 20px;
+    h1 {
+      justify-content: center;
+      margin-bottom: 10px;
+      font-size: 1.5rem;
+      line-height: 1.5;
+      text-align: center;
+    }
+  }
+  .sec{
+    flex-direction: column;
+    align-items: center;
+    img{
+      margin-bottom: 10px;
+    }
+    .other-links{
+      margin-top: 10px;
+      a{
+        font-size: 0.8rem;
+        line-height: 1.5;
+        text-align: center;
+      }
+      &::after{
+        display: none;
+      }
+    }
+
+  }
+}
