--- a/src/components/MoreProducts/MoreProducts.scss
+++ b/src/components/MoreProducts/MoreProducts.scss
@@ -101,3 +101,16 @@
     }
   }
 }
+@media screen and (max-width: 768px) {
+  .card-container{
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0;
+  }
+  .more .container::before{
+    display: none;
+  }
+  .more .container::after{
+    display: none;
+  }
+}
