--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -161,9 +161,29 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
+    h2{
+      margin-bottom: 10px;
+    }
+    p{
+      font-size: 0.8rem;
+      line-height: 1.5;
+      text-align: center;
+    }
+    .icon-payment{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 80px;
+    }
   }
   .footer-wrapper {
     flex-direction: column;
+    align-items: center;
+    &::after{
+      display: none;
+    }
   }
   .footer-descrip{
     margin-right: 0;
