--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -55,5 +55,26 @@ nav {
       }
     }
   }
-
+  .nav2{
+   .container {
+     .path {
+        @include vertical-align();
+        padding: 24px 0;
+        a {
+          font-weight: 500;
+          text-decoration: underline;
+          font-size: 12px;
+        }
+        span {
+          margin: 0 5px;
+          text-decoration: none;
+          font-size: 12px;
+        }
+        & a:last-of-type {
+          text-decoration: none;
+        }
+      }
+    }
+   
+  }
 }
