--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -183,6 +183,33 @@
     button {
       width: 100%;
       margin-top: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    button:first-of-type {
+      margin-right: 0;
+    }
+  }
+  .quantity{
+    div {
+      width: 100%;
+    }
+  }
+  .color{
+    div {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  .size{
+    div {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
