--- a/src/helpers/Mixins.scss
+++ b/src/helpers/Mixins.scss
@@ -6,8 +6,11 @@
   padding-top: $paddingTop;
   padding-bottom: $paddingBottom;
   display: flex;
+  @media (min-width: 390px) {
+    width: 100%;
+  }
   @media (min-width: 768px) {
-    width: 820px;
+    width: 720px;
   }
   @media (min-width: 992px) {
     width: 960px;
